--- a/data/deprecations/14-9-deprecate-composer-download-permissions.yml
+++ b/data/deprecations/14-9-deprecate-composer-download-permissions.yml
@@ -9,3 +9,4 @@
     The GitLab Composer repository can be used to push, search, fetch metadata about, and download PHP dependencies. All these actions require authentication, except for downloading dependencies.
 
     Downloading Composer dependencies without authentication is deprecated in GitLab 14.9, and will be removed in GitLab 15.0. Starting with GitLab 15.0, you must authenticate to download Composer dependencies.
+  stage: package
