--- a/data/deprecations/templates/14-9-deprecation-htpassword-authentication-container-registry.yml
+++ b/data/deprecations/templates/14-9-deprecation-htpassword-authentication-container-registry.yml
@@ -9,3 +9,4 @@
     The Container Registry supports [authentication](https://gitlab.com/gitlab-org/container-registry/-/blob/master/docs/configuration.md#auth) with `htpasswd`. It relies on an [Apache `htpasswd` file](https://httpd.apache.org/docs/2.4/programs/htpasswd.html), with passwords hashed using `bcrypt`.
 
     Since it isn't used in the context of GitLab (the product), `htpasswd` authentication will be deprecated in GitLab 14.9 and removed in GitLab 15.0.
+  stage: package
