--- a/data/deprecations/14-6-deprecate-types.yml
+++ b/data/deprecations/14-6-deprecate-types.yml
@@ -7,7 +7,8 @@
   body: |  # Do not modify this line, instead modify the lines below.
     The `type` and `types` CI/CD keywords will be removed in GitLab 15.0. Pipelines that use these keywords will stop working, so you must switch to `stage` and `stages`, which have the same behavior.
 # The following items are not published on the docs page, but may be used in the future.
-  stage:  # (optional - may be required in the future) String value of the stage that the feature was created in. e.g., Growth
+  stage: verify
+  reporter: dhershkovitch
   tiers:  # (optional - may be required in the future) An array of tiers that the feature is available in currently.  e.g., [Free, Silver, Gold, Core, Premium, Ultimate]
   issue_url:  # (optional) This is a link to the deprecation issue in GitLab
   documentation_url:  # (optional) This is a link to the current documentation page
