--- a/data/deprecations/14-6-job_char_limit.yml
+++ b/data/deprecations/14-6-job_char_limit.yml
@@ -7,7 +7,8 @@
   body: |  # Do not modify this line, instead modify the lines below.
     In GitLab 15.0 we are going to limit the number of characters in CI/CD job names to 255. Any pipeline with job names that exceed the 255 character limit will stop working after the 15.0 release.
 # The following items are not published on the docs page, but may be used in the future.
-  stage:  # (optional - may be required in the future) String value of the stage that the feature was created in. e.g., Growth
+  reporter: dhershkovitch
+  stage: verify
   tiers:  # (optional - may be required in the future) An array of tiers that the feature is available in currently.  e.g., [Free, Silver, Gold, Core, Premium, Ultimate]
   issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/342800  # (optional) This is a link to the deprecation issue in GitLab
   documentation_url:  # (optional) This is a link to the current documentation page
