--- a/data/deprecations/14-8-enforce-ssh-expiration.yml
+++ b/data/deprecations/14-8-enforce-ssh-expiration.yml
@@ -9,5 +9,6 @@
     The feature to disable enforcement of SSH expiration is unusual from a security perspective.
     We have become concerned that this unusual feature could create unexpected behavior for users.
     Unexpected behavior in a security feature is inherently dangerous, so we have decided to remove this feature.
+  stage: manage
   issue_url: "https://gitlab.com/gitlab-org/gitlab/-/issues/351963"  # (optional) This is a link to the deprecation issue in GitLab
   documentation_url: "https://docs.gitlab.com/ee/user/admin_area/settings/account_and_limit_settings.html#allow-expired-ssh-keys-to-be-used-deprecated"  # (optional) This is a link to the current documentation page
