--- a/data/deprecations/15-0-JTW_v2_update.yml
+++ b/data/deprecations/15-0-JTW_v2_update.yml
@@ -20,7 +20,7 @@
   body: |  # Do not modify this line, instead modify the lines below.
     The `CI_JOB_JWT` will be updated to support a wider variety of cloud providers. It will be changed to match [`CI_JOB_JWT_V2`](https://docs.gitlab.com/ee/ci/variables/predefined_variables.html), but this change may not be backwards compatible for all users, including Hashicorp Vault users. To maintain the current behavior, users can switch to using `CI_JOB_JWT_V1`, or update their configuration in GitLab 15.0 to use the improved `CI_JOB_JWT`.
 # The following items are not published on the docs page, but may be used in the future.
-  stage:  # (optional - may be required in the future) String value of the stage that the feature was created in. e.g., Growth
+  stage: verify
   tiers:  # (optional - may be required in the future) An array of tiers that the feature is available in currently.  e.g., [Free, Silver, Gold, Core, Premium, Ultimate]
   issue_url:  # (optional) This is a link to the deprecation issue in GitLab
   documentation_url:  # (optional) This is a link to the current documentation page
