Adding semgrep support for Java

--- a/lib/gitlab/ci/templates/Jobs/SAST.gitlab-ci.yml
+++ b/lib/gitlab/ci/templates/Jobs/SAST.gitlab-ci.yml
@@ -250,6 +250,7 @@ semgrep-sast:
   image:
     name: "$SAST_ANALYZER_IMAGE"
   variables:
+    SEARCH_MAX_DEPTH: 20
     SAST_ANALYZER_IMAGE_TAG: 2
     SAST_ANALYZER_IMAGE: "$SECURE_ANALYZERS_PREFIX/semgrep:$SAST_ANALYZER_IMAGE_TAG"
   rules:
@@ -266,6 +267,7 @@ semgrep-sast:
         - '**/*.tsx'
         - '**/*.c'
         - '**/*.go'
+        - '**/*.java'
 
 sobelow-sast:
   extends: .sast-analyzer
