--- a/db/docs/application_settings.yml
+++ b/db/docs/application_settings.yml
@@ -9,6 +9,6 @@ feature_categories:
 - pages
 - service_ping
 - source_code_management
-description: TODO
+description: GitLab application settings
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/8589b4e137f50293952923bb07e2814257d7784d
 milestone: '7.7'
