--- a/db/docs/ci_sources_pipelines.yml
+++ b/db/docs/ci_sources_pipelines.yml
@@ -3,7 +3,7 @@ table_name: ci_sources_pipelines
 classes:
 - Ci::Sources::Pipeline
 feature_categories:
-- continuous_integration
-description: TODO
+- pipeline_authoring
+description: It stores parent-child and cross-project pipeline relationships.
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/163983e0d7d1dab622846441bd0dd9086c78a69f
 milestone: '9.3'
