Refactor E2E testcase linting
Replaces 2 e2e testcase cops with a more comprehensive script.
Adds a check for missing testcases.

--- a/.gitlab/ci/rules.gitlab-ci.yml
+++ b/.gitlab/ci/rules.gitlab-ci.yml
@@ -1373,6 +1373,10 @@
   rules:
     - changes: *code-backstage-qa-patterns
 
+.static-analysis:rules:ee-and-foss-qa:
+  rules:
+    - changes: *qa-patterns
+
 .static-analysis:rules:ee:
   rules:
     - <<: *if-not-ee
