--- a/db/docs/ci_project_mirrors.yml
+++ b/db/docs/ci_project_mirrors.yml
@@ -4,6 +4,6 @@ classes:
 - Ci::ProjectMirror
 feature_categories:
 - sharding
-description: TODO
+description: Mirrors some data from the `main` database into the `ci` database so that we can join directly in a single query
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/75621
 milestone: '14.6'
