--- a/db/docs/loose_foreign_keys_deleted_records.yml
+++ b/db/docs/loose_foreign_keys_deleted_records.yml
@@ -4,6 +4,6 @@ classes:
 - LooseForeignKeys::DeletedRecord
 feature_categories:
 - sharding
-description: TODO
+description: Used by the loose foreign keys feature as a queue of parent records whose child records (via foreign keys) need to be deleted/nullified
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/70152
 milestone: '14.3'
