--- a/db/docs/projects_sync_events.yml
+++ b/db/docs/projects_sync_events.yml
@@ -4,6 +4,6 @@ classes:
 - Projects::SyncEvent
 feature_categories:
 - sharding
-description: TODO
+description: Used as a queue of data that needs to be synchronized between the `ci` and `main` database
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/75517
 milestone: '14.6'
