--- a/db/docs/product_analytics_events_experimental.yml
+++ b/db/docs/product_analytics_events_experimental.yml
@@ -4,6 +4,6 @@ classes:
 - ProductAnalyticsEvent
 feature_categories:
 - product_analytics
-description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/9af97ee69a36de1dc4e73f4030d6316d3f0a82c5
+description: Product analytic events, experimental feature.
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/fc6c53e6f7b47dc22c8619a5a6fe491d29778d3f
 milestone: '13.2'
