--- a/db/docs/coverage_fuzzing_corpuses.yml
+++ b/db/docs/coverage_fuzzing_corpuses.yml
@@ -3,7 +3,7 @@ table_name: coverage_fuzzing_corpuses
 classes:
 - AppSec::Fuzzing::Coverage::Corpus
 feature_categories:
-- code_quality
-description: TODO
+- fuzz_testing
+description: Stores additional values describing corpuses used by coverage fuzzing
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/71704
 milestone: '14.4'
