--- a/db/docs/issue_tracker_data.yml
+++ b/db/docs/issue_tracker_data.yml
@@ -4,6 +4,6 @@ classes:
 - Integrations::IssueTrackerData
 feature_categories:
 - integrations
-description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/1f332ae8da994509232c7601074b25514ad23c52
+description: Data related to the issue tracker integrations.
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/14187
 milestone: '12.0'
