--- a/db/docs/jira_imports.yml
+++ b/db/docs/jira_imports.yml
@@ -4,6 +4,6 @@ classes:
 - JiraImportState
 feature_categories:
 - integrations
-description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/9af97ee69a36de1dc4e73f4030d6316d3f0a82c5
-milestone: '13.0'
+description: Track Jira issue import progress into GitLab issues.
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/28108
+milestone: '12.10'
