--- a/db/docs/operations_feature_flags.yml
+++ b/db/docs/operations_feature_flags.yml
@@ -3,7 +3,7 @@ table_name: operations_feature_flags
 classes:
 - Operations::FeatureFlag
 feature_categories:
-- integrations
+- release
 description: TODO
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/7433
 milestone: '11.4'
