--- a/db/docs/slack_integrations.yml
+++ b/db/docs/slack_integrations.yml
@@ -4,6 +4,6 @@ classes:
 - SlackIntegration
 feature_categories:
 - integrations
-description: TODO
+description: Data related to the Slack application integration.
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/f50ef96b87d8c785662e82843c22a2ef6093132e
 milestone: '9.4'
