--- a/db/docs/web_hook_logs.yml
+++ b/db/docs/web_hook_logs.yml
@@ -4,6 +4,6 @@ classes:
 - WebHookLog
 feature_categories:
 - integrations
-description: TODO
+description: Webhooks logs data.
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/330789c23c777d8ca646eba7c25f39cb7342cdee
 milestone: '9.3'
