Add namespace settings attributes pipeline to group bulk imports
Add a new pipeline that migrates specific namespace settings attributes
from the exported NDJSON namespace_settings.ndjson. This commit also
adds this NDJSON file to the list of files to be generated during the
group export.

This NDJSON is not imported when importing the group from a file. It is
only used in the bulk import.

Changelog: added
EE: true

--- a/lib/gitlab/import_export/group/import_export.yml
+++ b/lib/gitlab/import_export/group/import_export.yml
@@ -16,6 +16,7 @@ tree:
         - :board
     - members:
       - :user
+    - :namespace_settings
 
 included_attributes:
   user:
@@ -24,6 +25,8 @@ included_attributes:
     - :username
   author:
     - :name
+  namespace_settings:
+    - :prevent_sharing_groups_outside_hierarchy
 
 excluded_attributes:
   group:
