--- a/db/docs/bulk_imports.yml
+++ b/db/docs/bulk_imports.yml
@@ -4,6 +4,6 @@ classes:
 - BulkImport
 feature_categories:
 - importers
-description: TODO
+description: Used to store and track the status of a bulk import request of groups or projects
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/42978
 milestone: '13.5'
