--- a/db/docs/group_import_states.yml
+++ b/db/docs/group_import_states.yml
@@ -4,6 +4,6 @@ classes:
 - GroupImportState
 feature_categories:
 - importers
-description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/9af97ee69a36de1dc4e73f4030d6316d3f0a82c5
+description: Used to store and track the group import status when using the Import/Export feature
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/29588
 milestone: '13.0'
