--- a/db/docs/bulk_import_entities.yml
+++ b/db/docs/bulk_import_entities.yml
@@ -4,6 +4,6 @@ classes:
 - BulkImports::Entity
 feature_categories:
 - importers
-description: TODO
+description: Used to store and track the status of the migration of groups or projects
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/42978
 milestone: '13.5'
