--- a/db/docs/import_export_uploads.yml
+++ b/db/docs/import_export_uploads.yml
@@ -4,6 +4,6 @@ classes:
 - ImportExportUpload
 feature_categories:
 - importers
-description: TODO
+description: Used to store the location of the imported or exported archives files of groups or projects when using the feature Import/Export
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/a2bf1641546a1d3eeb3e9f44734854f655c0adef
 milestone: '11.1'
