--- a/db/docs/project_import_data.yml
+++ b/db/docs/project_import_data.yml
@@ -4,6 +4,6 @@ classes:
 - ProjectImportData
 feature_categories:
 - importers
-description: TODO
+description: Used to store credentials and configuration of external projects when using the Import/Export feature
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/7d98c8842d6bc9b14fb410f028db7ab651961b42
 milestone: '7.10'
