--- a/db/docs/project_mirror_data.yml
+++ b/db/docs/project_mirror_data.yml
@@ -4,6 +4,6 @@ classes:
 - ProjectImportState
 feature_categories:
 - importers
-description: TODO
+description: Used to store and track the project import status when using the Import/Export feature
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/0ca479d1ce0eadfcdc0e29d0e18136f5790d5b2f
 milestone: '9.3'
