--- a/db/docs/system_note_metadata.yml
+++ b/db/docs/system_note_metadata.yml
@@ -3,7 +3,7 @@ table_name: system_note_metadata
 classes:
 - SystemNoteMetadata
 feature_categories:
-- importers
-description: TODO
+- team_planning
+description: Used to store notes metadata
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/1c3c7fb25d972fc19d5b4bb371cb21094d81e478
 milestone: '9.1'
