Add Milestone info to releases in Project Import/Export

--- a/lib/gitlab/import_export/project/import_export.yml
+++ b/lib/gitlab/import_export/project/import_export.yml
@@ -48,6 +48,8 @@ tree:
         - :award_emoji
     - releases:
       - :links
+      - milestone_releases:
+        - :milestone
     - project_members:
       - :user
     - merge_requests:
@@ -958,6 +960,9 @@ excluded_attributes:
   system_note_metadata:
     - :description_version_id
     - :note_id
+  milestone_releases:
+    - :milestone_id
+    - :release_id
 methods:
   notes:
     - :type
