--- a/spec/fixtures/lib/gitlab/import_export/complex/project.json
+++ b/spec/fixtures/lib/gitlab/import_export/complex/project.json
@@ -2378,6 +2378,23 @@
           "created_at": "2019-12-26T10:17:14.621Z",
           "updated_at": "2019-12-26T10:17:14.621Z"
         }
+      ],
+      "milestone_releases": [
+        {
+          "milestone_id": 1349,
+          "release_id": 9172,
+          "milestone": {
+            "id": 1,
+            "title": "test milestone",
+            "project_id": 8,
+            "description": "test milestone",
+            "due_date": null,
+            "created_at": "2016-06-14T15:02:04.415Z",
+            "updated_at": "2016-06-14T15:02:04.415Z",
+            "state": "active",
+            "iid": 1
+          }
+        }
       ]
     }
   ],
