Always start package-and-qa when the MR targets a stable branch
Signed-off-by: Rémy Coutable <remy@rymai.me>

--- a/.gitlab/ci/rules.gitlab-ci.yml
+++ b/.gitlab/ci/rules.gitlab-ci.yml
@@ -604,6 +604,7 @@
   rules:
     - <<: *if-not-ee
       when: never
+    - <<: *if-merge-request-targeting-stable-branch
     - <<: *if-merge-request-labels-run-review-app
     - <<: *if-dot-com-gitlab-org-and-security-merge-request
       changes: *ci-build-images-patterns
@@ -618,6 +619,7 @@
   rules:
     - <<: *if-not-canonical-namespace
       when: never
+    - <<: *if-merge-request-targeting-stable-branch
     - <<: *if-merge-request-labels-run-review-app
     - <<: *if-auto-deploy-branches
     - changes: *ci-build-images-patterns
@@ -692,6 +694,7 @@
   rules:
     - <<: *if-not-canonical-namespace
       when: never
+    - <<: *if-merge-request-targeting-stable-branch
     - <<: *if-merge-request-labels-run-review-app
     - <<: *if-auto-deploy-branches
     - changes: *code-qa-patterns
@@ -882,6 +885,8 @@
     - <<: *if-dot-com-gitlab-org-and-security-merge-request
       changes: *feature-flag-development-config-patterns
       when: never
+    - <<: *if-merge-request-targeting-stable-branch
+      allow_failure: true
     - <<: *if-dot-com-gitlab-org-and-security-merge-request
       changes: *nodejs-patterns
       allow_failure: true
