Update Certify db table definitions

--- a/db/docs/issue_email_participants.yml
+++ b/db/docs/issue_email_participants.yml
@@ -4,6 +4,6 @@ classes:
 - IssueEmailParticipant
 feature_categories:
 - service_desk
-description: TODO
+description: Email addresses for non-GitLab users added to issues as participants
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/42943
 milestone: '13.5'
