--- a/db/docs/requirements.yml
+++ b/db/docs/requirements.yml
@@ -4,6 +4,6 @@ classes:
 - RequirementsManagement::Requirement
 feature_categories:
 - requirements_management
-description: TODO
+description: Information relating to Requirements as implemented by the Requirements Management tool
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/26097
 milestone: '12.9'
