--- a/db/docs/requirements_management_test_reports.yml
+++ b/db/docs/requirements_management_test_reports.yml
@@ -4,6 +4,6 @@ classes:
 - RequirementsManagement::TestReport
 feature_categories:
 - requirements_management
-description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/9af97ee69a36de1dc4e73f4030d6316d3f0a82c5
-milestone: '13.1'
+description: Information related to Test Reports, which relate historical test outcomes to Requirements
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/31643
+milestone: '13.0'
