Bring page closer to GitLab tone and style
Definitely a MVC, but I think we can wait to document more of this
feature until it's out of the feature flag. I know Eduardo is
rolling changes pretty quickly right now.

--- a/config/feature_flags/development/rendered_diffs_viewer.yml
+++ b/config/feature_flags/development/rendered_diffs_viewer.yml
@@ -2,7 +2,7 @@
 name: rendered_diffs_viewer
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/75500
 rollout_issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/352831
-milestone: '14.9'
+milestone: '15.0'
 type: development
 group: group::incubation
-default_enabled: false
+default_enabled: true
