--- a/.solargraph.yml.example
+++ b/.solargraph.yml.example
@@ -6,11 +6,22 @@ exclude:
 - qa/qa/specs/features/**/*
 - vendor/**/*
 - ".bundle/**/*"
-require: []
+require:
+- actioncable
+- actionmailer
+- actionpack
+- actionview
+- activejob
+- activemodel
+- activerecord
+- activestorage
+- activesupport
 domains: []
 reporters:
-- rubocop
+- rubocop  # diagnostics
 - require_not_found
+formatter:
+  rubocop: # formatting
 require_paths: []
 plugins: []
 max_files: 15000
