--- a/db/docs/chat_names.yml
+++ b/db/docs/chat_names.yml
@@ -3,7 +3,7 @@ table_name: chat_names
 classes:
 - ChatName
 feature_categories:
-- users
+- integrations
 description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/c60437786bfe43344b4a5eb040437f73f37c6396
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab-foss/-/merge_requests/7450
 milestone: '8.14'
