--- a/db/docs/customer_relations_organizations.yml
+++ b/db/docs/customer_relations_organizations.yml
@@ -3,7 +3,7 @@ table_name: customer_relations_organizations
 classes:
 - CustomerRelations::Organization
 feature_categories:
-- subgroups
+- service_desk
 description: TODO
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/67551
 milestone: '14.2'
