--- a/db/docs/group_crm_settings.yml
+++ b/db/docs/group_crm_settings.yml
@@ -3,7 +3,7 @@ table_name: group_crm_settings
 classes:
 - Group::CrmSettings
 feature_categories:
-- subgroups
+- service_desk
 description: TODO
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/76983
 milestone: '14.7'
