--- a/db/docs/internal_ids.yml
+++ b/db/docs/internal_ids.yml
@@ -3,8 +3,7 @@ table_name: internal_ids
 classes:
 - InternalId
 feature_categories:
-- projects
-- subgroups
+- database
 description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/754272e392c0da088200a1b56156600973f63267
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab-foss/-/merge_requests/17580
 milestone: '10.7'
