--- a/db/docs/list_user_preferences.yml
+++ b/db/docs/list_user_preferences.yml
@@ -3,7 +3,7 @@ table_name: list_user_preferences
 classes:
 - ListUserPreference
 feature_categories:
-- users
+- team_planning
 description: TODO
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/15657
 milestone: '12.3'
