--- a/db/docs/namespace_admin_notes.yml
+++ b/db/docs/namespace_admin_notes.yml
@@ -3,7 +3,7 @@ table_name: namespace_admin_notes
 classes:
 - Namespace::AdminNote
 feature_categories:
-- subgroups
+- authentication_and_authorization
 description: TODO
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/47825
 milestone: '13.11'
