--- a/db/docs/programming_languages.yml
+++ b/db/docs/programming_languages.yml
@@ -3,7 +3,7 @@ table_name: programming_languages
 classes:
 - ProgrammingLanguage
 feature_categories:
-- projects
+- source_code_management
 description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/79a5d76801a45696db629e1f543f2e1d6fa4784f
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab-foss/-/merge_requests/19480
 milestone: '11.2'
