--- a/db/docs/project_security_settings.yml
+++ b/db/docs/project_security_settings.yml
@@ -3,7 +3,7 @@ table_name: project_security_settings
 classes:
 - ProjectSecuritySetting
 feature_categories:
-- projects
+- dependency_scanning
 description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/9af97ee69a36de1dc4e73f4030d6316d3f0a82c5
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/32577
 milestone: '13.1'
