--- a/db/docs/project_tracing_settings.yml
+++ b/db/docs/project_tracing_settings.yml
@@ -3,7 +3,7 @@ table_name: project_tracing_settings
 classes:
 - ProjectTracingSetting
 feature_categories:
-- projects
+- tracing
 description: TODO
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/7903
 milestone: '11.5'
