--- a/db/docs/saved_replies.yml
+++ b/db/docs/saved_replies.yml
@@ -3,7 +3,7 @@ table_name: saved_replies
 classes:
 - Users::SavedReply
 feature_categories:
-- users
+- team_planning
 description: TODO
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/80807
 milestone: '14.9'
