--- a/db/docs/ar_internal_metadata.yml
+++ b/db/docs/ar_internal_metadata.yml
@@ -3,6 +3,7 @@ table_name: ar_internal_metadata
 classes: []
 feature_categories:
 - database
-description: TODO
-introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/9af97ee69a36de1dc4e73f4030d6316d3f0a82c5
-milestone: '13.0'
+description: >-
+  An internal table used by ActiveRecord to store information about how the database was migrated.
+introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/commit/9ba1224867665844b117fa037e1465bb706b3685
+milestone: '0.8'
