--- a/ee/config/audit_events/types/merge_request_approval_operation.yml
+++ b/ee/config/audit_events/types/merge_request_approval_operation.yml
@@ -5,5 +5,5 @@ introduced_by_issue: https://gitlab.com/gitlab-org/gitlab/-/issues/10869
 introduced_by_mr: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/92983
 milestone: '15.3'
 feature_category: code_review_workflow
-saved_to_database: true
+saved_to_database: false
 streamed: true
