Geo: Add Design repos' replication/verification to SSF
Implement geo support for designs behind FF

Add Design replication and verification metrics to the API, admin view, and Prometheus.

Make design replication and verification data available via GraphQl
Change uploader to use LFSObjectUploader, compile graphql docs

Add design repo fields to geo node status

Changelog: added

EE: true

--- a/ee/db/geo/docs/design_management_repository_registry.yml
+++ b/ee/db/geo/docs/design_management_repository_registry.yml
@@ -4,6 +4,7 @@ description: Registry table for Design Management Repositories
 introduced_by_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/355660'
 milestone: '16.0'
 feature_categories:
- - geo_replication
-classes: []
+- geo_replication
+classes:
+- Geo::DesignManagementRepositoryRegistry
 gitlab_schema: gitlab_geo
