Migrate user_unique_users_all_secure_scanners to instrumentation
Move metric to the new instrumentation class and update usage_data

--- a/ee/config/metrics/counts_28d/20210216181956_user_unique_users_all_secure_scanners.yml
+++ b/ee/config/metrics/counts_28d/20210216181956_user_unique_users_all_secure_scanners.yml
@@ -11,6 +11,9 @@ milestone: "13.2"
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/33881
 time_frame: 28d
 data_source: database
+instrumentation_class: CountUsersCreatingCiBuildsMetric
+options:
+  secure_type: all
 distribution:
 - ee
 tier:
