--- a/ee/config/metrics/counts_all/20210216181954_user_unique_users_all_secure_scanners.yml
+++ b/ee/config/metrics/counts_all/20210216181954_user_unique_users_all_secure_scanners.yml
@@ -9,6 +9,9 @@ value_type: number
 status: active
 milestone: "13.2"
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/33881
+instrumentation_class: CountUsersCreatingCiBuildsMetric
+options:
+  secure_type: all
 time_frame: all
 data_source: database
 distribution:
