Reuse qa-common in review-app pipeline

--- a/.gitlab/ci/review.gitlab-ci.yml
+++ b/.gitlab/ci/review.gitlab-ci.yml
@@ -101,6 +101,7 @@ start-review-app-pipeline:
     SCHEDULE_TYPE: $SCHEDULE_TYPE
     DAST_RUN: $DAST_RUN
     SKIP_MESSAGE: Skipping review-app due to mr containing only quarantine changes!
+    QA_RUN_TYPE: e2e-review-qa
   trigger:
     strategy: depend
     include:
