--- a/ee/app/workers/all_queues.yml
+++ b/ee/app/workers/all_queues.yml
@@ -1704,6 +1704,15 @@
   :weight: 1
   :idempotent: true
   :tags: []
+- :name: security_generate_policy_violation_comment
+  :worker_name: Security::GeneratePolicyViolationCommentWorker
+  :feature_category: :security_policy_management
+  :has_external_dependencies: false
+  :urgency: :low
+  :resource_boundary: :unknown
+  :weight: 1
+  :idempotent: true
+  :tags: []
 - :name: security_orchestration_configuration_create_bot
   :worker_name: Security::OrchestrationConfigurationCreateBotWorker
   :feature_category: :security_policy_management
