--- a/.gitlab/ci/qa-common/main.gitlab-ci.yml
+++ b/.gitlab/ci/qa-common/main.gitlab-ci.yml
@@ -219,6 +219,7 @@ stages:
         echo "Test suite passed. Exiting..."
         exit 0
       fi
+    - bundle exec update-screenshot-paths --input-files "${CI_PROJECT_DIR}/gitlab-qa-run-*/**/rspec-*.xml"
     - |
       bundle exec relate-failure-issue \
         --input-files "${QA_RSPEC_JSON_FILE_PATTERN}" \
