Reassign metrics from product_intelligence to analytics_instrumentation

--- a/ee/config/metrics/license/20210531204603_license_billable_users.yml
+++ b/ee/config/metrics/license/20210531204603_license_billable_users.yml
@@ -5,7 +5,7 @@ name: billable_users
 description: Number of all billable users (active users excluding bots and guests).
 product_section: analytics
 product_stage: analytics
-product_group: product_intelligence
+product_group: analytics_instrumentation
 value_type: number
 status: active
 milestone: "14.0"
