--- a/ee/config/metrics/counts_28d/20220201220429_users_clicking_registration_features_offer_monthly.yml
+++ b/ee/config/metrics/counts_28d/20220201220429_users_clicking_registration_features_offer_monthly.yml
@@ -3,7 +3,7 @@ key_path: redis_hll_counters.growth.users_clicking_registration_features_offer_m
 description: The number of unique users who clicked the settings link in the Registration Features offer CTA
 product_section: analytics
 product_stage: analytics
-product_group: product_intelligence
+product_group: analytics_instrumentation
 value_type: number
 status: active
 milestone: "14.8"
