--- a/ee/config/metrics/counts_7d/20210216184138_testing_total_unique_counts_weekly.yml
+++ b/ee/config/metrics/counts_7d/20210216184138_testing_total_unique_counts_weekly.yml
@@ -4,7 +4,7 @@ key_path: redis_hll_counters.testing.testing_total_unique_counts_weekly
 description: Total users for events under testing category
 product_section: analytics
 product_stage: analytics
-product_group: product_intelligence
+product_group: analytics_instrumentation
 value_type: number
 status: removed
 time_frame: 7d
