--- a/ee/config/metrics/license/20210204124940_recording_ee_finished_at.yml
+++ b/ee/config/metrics/license/20210204124940_recording_ee_finished_at.yml
@@ -3,7 +3,7 @@ key_path: recording_ee_finished_at
 description: When the EE-specific features were computed
 product_section: analytics
 product_stage: analytics
-product_group: product_intelligence
+product_group: analytics_instrumentation
 value_type: string
 status: active
 milestone: "13.0"
